[package]
name = "backend"
version = "0.1.0"
authors = ["Mathis <handymathis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-cors = "0.3.0"
actix-files = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.3"
dotenv = "0.15.0"